--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app</groupId>
 	<artifactId>votacao-pautas</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.4</version>
 	<properties>
 		<compiler-plugin.version>3.8.1</compiler-plugin.version>
 		<maven.compiler.parameters>true</maven.compiler.parameters>
