--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app</groupId>
-	<artifactId>votacao-pautas</artifactId>
+	<artifactId>quarkus-app</artifactId>
 	<version>1.4</version>
+	<packaging>jar</packaging>
+	
+	<name>quarkus-app</name>
+	<description>Sistema de Votação de Pautas</description>
+	
 	<properties>
 		<compiler-plugin.version>3.8.1</compiler-plugin.version>
 		<maven.compiler.parameters>true</maven.compiler.parameters>
@@ -20,6 +26,7 @@
 		<quarkus.platform.version>1.5.1.Final</quarkus.platform.version>
 		<surefire-plugin.version>2.22.1</surefire-plugin.version>
 	</properties>
+	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -31,6 +38,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>io.quarkus</groupId>
@@ -120,6 +128,7 @@
 	    	<artifactId>quarkus-swagger-ui</artifactId>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -149,6 +158,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<profiles>
 		<profile>
 			<id>native</id>
