Alterado o arquivo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ quarkus.datasource.max-size=8
 quarkus.hibernate-orm.database.generation=update
 #quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
+
+#OpenAPI
+quarkus.smallrye-openapi.path=/openapi
+
+#Swagger
+quarkus.swagger-ui.path=/swagger
+quarkus.swagger-ui.always-include=true
