Alteração no arquivo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.smallrye-openapi.path=/openapi
 
 #Swagger
-quarkus.swagger-ui.path=/swagger
+quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.always-include=true
