Adicionado os Testes Unitários e realizado alguns ajustes na API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ quarkus.smallrye-openapi.path=/openapi
 #Swagger
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.always-include=true
+
+#Logs
+quarkus.log.level=WARNING
+quarkus.log.console.color=true
+quarkus.log.console.darken=1
+quarkus.log.file.enable=true
