--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSource
-quarkus.datasource.url=jdbc:h2:mem:app
+quarkus.datasource.url=jdbc:h2:mem:test
 quarkus.datasource.driver=org.h2.Driver
 quarkus.datasource.username=username-default
 quarkus.datasource.initial-size=1
@@ -11,16 +11,3 @@ quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
 #quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
-
-#OpenAPI
-quarkus.smallrye-openapi.path=/openapi
-
-#Swagger
-quarkus.swagger-ui.path=/swagger-ui
-quarkus.swagger-ui.always-include=true
-
-#Logs
-quarkus.log.level=WARNING
-quarkus.log.console.color=true
-quarkus.log.console.darken=1
-quarkus.log.file.enable=true
