--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSource
-quarkus.datasource.url=jdbc:h2:mem:test
+quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
 quarkus.datasource.driver=org.h2.Driver
 quarkus.datasource.username=username-default
 quarkus.datasource.initial-size=1
