--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource
-quarkus.datasource.url=jdbc:h2:mem:app
 quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.username=username-default
+quarkus.datasource.url=jdbc:h2:mem:app
+quarkus.datasource.username=sa
 quarkus.datasource.initial-size=1
 quarkus.datasource.min-size=2
 quarkus.datasource.max-size=8
