Adicionado a tela de login e autorização de páginas via JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,25 @@ quarkus.datasource.initial-size=1
 quarkus.datasource.min-size=2
 quarkus.datasource.max-size=8
 
+#Port
+quarkus.http.port=8080
+
 #Hibernate
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
 #quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
+
+#CORS
+quarkus.http.cors=true
+quarkus.http.cors.methods=GET,PUT,POST,OPTIONS
+quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with
+quarkus.http.cors.exposed-headers=Content-Disposition
+
+#JWT
+quarkus.smallrye-jwt.enabled=true
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=JWT
 
 #OpenAPI
 quarkus.smallrye-openapi.path=/openapi
