--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-jwt</artifactId>
     </dependency>
+    <dependency>
+      <groupId>at.favre.lib</groupId>
+      <artifactId>bcrypt</artifactId>
+      <version>0.9.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
