--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.http.port=8080
 
 #DataSource
 quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.url=jdbc:h2:mem:app
+quarkus.datasource.url=jdbc:h2:mem:app;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;DATABASE_TO_UPPER=false;
 quarkus.datasource.username=sa
 quarkus.datasource.initial-size=1
 quarkus.datasource.min-size=2
@@ -12,7 +12,7 @@ quarkus.datasource.max-size=8
 #Hibernate
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
-#quarkus.hibernate-orm.sql-load-script=import.sql
+quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
 
 #CORS
