--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.http.port=8081
 
 #DataSource
 quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.url=jdbc:h2:mem:test
+quarkus.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;DATABASE_TO_UPPER=false;
 quarkus.datasource.username=sa
 quarkus.datasource.initial-size=1
 quarkus.datasource.min-size=2
